Add dog bunny puzzle

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
         isEmbeddable: true,
       },
       {
+        name: 'Dog Bunny Puzzle',
+        link: 'https://dogbunnypuzzle.com/',
+        isEmbeddable: false,
+      },
+      {
         name: 'Wordle',
         link: 'https://www.nytimes.com/games/wordle/index.html',
         isEmbeddable: false,
