--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       {
         name: 'Heardle',
         link: 'https://www.spotify.com/heardle/',
-        isEmbeddable: true,
+        isEmbeddable: false,
       },
       {
         name: 'Dog Bunny Puzzle',
