--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
         isEmbeddable: true,
       },
       {
+        name: 'Statele',
+        link: 'https://statele.teuteuf.fr/',
+        isEmbeddable: true,
+      },
+      {
         name: 'Emovi',
         link: 'https://emovi.teuteuf.fr/',
         isEmbeddable: true,
